# sko

./: .gitignore  Makefile  Makefile.am  README.md  board.cpp  board.hpp  cell.cpp  cell.hpp  cli.cpp  cli.hpp  configure.ac  file.hpp  main.cpp  stats.hpp
